--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "license": "MIT",
   "dependencies": {
-    "@codemirror/highlight": "^0.19.0",
+    "@codemirror/highlight": "github:Sircoz/highlight",
     "@codemirror/language": "^0.19.0",
     "@codemirror/state": "^0.19.0",
     "@codemirror/text": "^0.19.0",
