--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@radu/stream-parser",
+  "name": "@rdu/stream-parser",
   "version": "0.19.2",
   "description": "Streaming language parser for the CodeMirror code editor",
   "scripts": {
